[gd_scene load_steps=30 format=3 uid="uid://bnjpcjrhibilc"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_2njjm"]
[ext_resource type="Texture2D" uid="uid://4py48pdn654o" path="res://sprites/Sprite sheets/Sprite sheet for Basic Pack.png" id="1_ladwj"]
[ext_resource type="Texture2D" uid="uid://bv7r4c0hltadj" path="res://sprites/tela_inicial.png" id="2_1cnb7"]
[ext_resource type="FontFile" uid="uid://c4nueunka0nmj" path="res://sprites/fonts/pixelFont-7-8x14-sproutLands.ttf" id="2_otd6a"]
[ext_resource type="Texture2D" uid="uid://dscpjkk5o6p75" path="res://sprites/Sprite sheets/UI Big Play Button.png" id="3_catdo"]
[ext_resource type="Texture2D" uid="uid://bukdvsrw4bey8" path="res://sprites/Sprite sheets/UI Big Button.png" id="4_gn0kx"]
[ext_resource type="Texture2D" uid="uid://bh7evk8vcdawj" path="res://sprites/Sprite sheets/Mute.png" id="6_0c67a"]
[ext_resource type="Texture2D" uid="uid://cpfyo8s48od7s" path="res://sprites/Sprite sheets/controls.png" id="6_d1clh"]
[ext_resource type="Texture2D" uid="uid://kytwyrn4rqpf" path="res://sprites/Sprite sheets/Volume1.png" id="7_khumd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lqwky"]
texture = ExtResource("3_catdo")
region_rect = Rect2(99, 36, 90, 25)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xweqs"]
texture = ExtResource("3_catdo")
region_rect = Rect2(3, 34, 90, 27)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rpvwc"]
texture = ExtResource("1_ladwj")
region_rect = Rect2(805, 230, 22, 22)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5r5m2"]
texture = ExtResource("1_ladwj")
region_rect = Rect2(773, 228, 22, 24)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4tqnn"]
texture = ExtResource("1_ladwj")
region_rect = Rect2(741, 198, 22, 22)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rydp5"]
texture = ExtResource("1_ladwj")
region_rect = Rect2(709, 196, 22, 24)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tstpb"]
texture = ExtResource("1_ladwj")
region_rect = Rect2(869, 230, 22, 22)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ao4q2"]
texture = ExtResource("1_ladwj")
region_rect = Rect2(837, 228, 22, 24)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8fahm"]
texture = ExtResource("4_gn0kx")
region_rect = Rect2(99, 4, 90, 25)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d4efu"]
texture = ExtResource("4_gn0kx")
region_rect = Rect2(3, 2, 90, 27)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6i6j5"]
texture = ExtResource("6_d1clh")
region_rect = Rect2(2, 9, 78, 52)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8nl6a"]
texture = ExtResource("6_d1clh")
region_rect = Rect2(81, 9, 78, 52)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_thd2n"]
texture = ExtResource("6_d1clh")
region_rect = Rect2(17, 72, 14, 23)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dxa0p"]
texture = ExtResource("1_ladwj")
region_rect = Rect2(871, 39, 18, 18)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4i4ft"]
texture = ExtResource("1_ladwj")
region_rect = Rect2(839, 37, 18, 20)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uf5uq"]
texture = ExtResource("6_0c67a")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_23ww7"]
texture = ExtResource("7_khumd")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sip23"]
texture = ExtResource("1_ladwj")
texture_margin_left = 3.0
texture_margin_top = 2.0
texture_margin_right = 3.0
texture_margin_bottom = 2.0
region_rect = Rect2(341, 6, 38, 4)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sh8md"]
texture = ExtResource("1_ladwj")
expand_margin_left = 4.0
expand_margin_top = 9.0
expand_margin_right = 4.0
expand_margin_bottom = 9.0
region_rect = Rect2(341, 69, 7, 18)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fu831"]
texture = ExtResource("1_ladwj")
expand_margin_left = 4.0
expand_margin_top = 9.0
expand_margin_right = 4.0
expand_margin_bottom = 9.0
region_rect = Rect2(373, 69, 7, 18)

[node name="mainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="mainContainer" type="MarginContainer" parent="." node_paths=PackedStringArray("menu_screen", "settings_menu_screen", "controls_menu_screen", "how_to_play_menu_screen")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2njjm")
menu_screen = NodePath("MainMenuContainer")
settings_menu_screen = NodePath("settingsMenuContainer")
controls_menu_screen = NodePath("controlsContainer")
how_to_play_menu_screen = NodePath("howToPlayContainer")

[node name="NinePatchRect" type="NinePatchRect" parent="mainContainer"]
custom_minimum_size = Vector2(1024, 1024)
layout_mode = 2
texture = ExtResource("2_1cnb7")
region_rect = Rect2(0, -4, 1531, 1030)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MainMenuContainer" type="HBoxContainer" parent="mainContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 80

[node name="MarginContainer" type="MarginContainer" parent="mainContainer/MainMenuContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NinePatchRect" type="NinePatchRect" parent="mainContainer/MainMenuContainer/MarginContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("1_ladwj")
region_rect = Rect2(245, 5, 38, 38)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="mainContainer/MainMenuContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="Control" type="Control" parent="mainContainer/MainMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="mainContainer/MainMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="mainContainer/MainMenuContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="nameDisplay" type="Label" parent="mainContainer/MainMenuContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.952941, 0.898039, 0.760784, 1)
theme_override_colors/font_outline_color = Color(0.768627, 0.603922, 0.423529, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("2_otd6a")
theme_override_font_sizes/font_size = 30
text = "BIOGame
"

[node name="playButton" type="Button" parent="mainContainer/MainMenuContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/hover = SubResource("StyleBoxTexture_lqwky")
theme_override_styles/pressed = SubResource("StyleBoxTexture_lqwky")
theme_override_styles/normal = SubResource("StyleBoxTexture_xweqs")

[node name="VBoxContainer" type="VBoxContainer" parent="mainContainer/MainMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="mainContainer/MainMenuContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="toggleControlsMenu" type="Button" parent="mainContainer/MainMenuContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_rpvwc")
theme_override_styles/pressed = SubResource("StyleBoxTexture_rpvwc")
theme_override_styles/normal = SubResource("StyleBoxTexture_5r5m2")

[node name="toggleHTPMenu" type="Button" parent="mainContainer/MainMenuContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_4tqnn")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4tqnn")
theme_override_styles/normal = SubResource("StyleBoxTexture_rydp5")

[node name="toggleSettingsMenu" type="Button" parent="mainContainer/MainMenuContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_tstpb")
theme_override_styles/pressed = SubResource("StyleBoxTexture_tstpb")
theme_override_styles/normal = SubResource("StyleBoxTexture_ao4q2")

[node name="exitButton" type="Button" parent="mainContainer/MainMenuContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/hover = SubResource("StyleBoxTexture_8fahm")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8fahm")
theme_override_styles/normal = SubResource("StyleBoxTexture_d4efu")

[node name="Control" type="Control" parent="mainContainer/MainMenuContainer"]
layout_mode = 2

[node name="controlsContainer" type="MarginContainer" parent="mainContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NinePatchRect" type="NinePatchRect" parent="mainContainer/controlsContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_ladwj")
region_rect = Rect2(293, 5, 38, 38)
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="mainContainer/controlsContainer/NinePatchRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="mainContainer/controlsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="mainContainer/controlsContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="mainContainer/controlsContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Control" type="Control" parent="mainContainer/controlsContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="settingsDisplay" type="Label" parent="mainContainer/controlsContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.952941, 0.898039, 0.760784, 1)
theme_override_colors/font_outline_color = Color(0.768627, 0.603922, 0.423529, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("2_otd6a")
theme_override_font_sizes/font_size = 30
text = "Controls"

[node name="MOVE" type="Label" parent="mainContainer/controlsContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.952941, 0.898039, 0.760784, 1)
theme_override_colors/font_outline_color = Color(0.768627, 0.603922, 0.423529, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("2_otd6a")
theme_override_font_sizes/font_size = 20
text = "MOVE
"

[node name="HBoxContainer2" type="HBoxContainer" parent="mainContainer/controlsContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Panel" type="Panel" parent="mainContainer/controlsContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_6i6j5")

[node name="VBoxContainer" type="VBoxContainer" parent="mainContainer/controlsContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Display" type="Label" parent="mainContainer/controlsContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.952941, 0.898039, 0.760784, 1)
theme_override_colors/font_outline_color = Color(0.768627, 0.603922, 0.423529, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("2_otd6a")
theme_override_font_sizes/font_size = 20
text = "OR"
uppercase = true

[node name="Panel2" type="Panel" parent="mainContainer/controlsContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_8nl6a")

[node name="Display" type="Label" parent="mainContainer/controlsContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.952941, 0.898039, 0.760784, 1)
theme_override_colors/font_outline_color = Color(0.768627, 0.603922, 0.423529, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("2_otd6a")
theme_override_font_sizes/font_size = 20
text = "SHOOT
"

[node name="Panel" type="Panel" parent="mainContainer/controlsContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_thd2n")

[node name="exitButtom" type="VBoxContainer" parent="mainContainer/controlsContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="mainContainer/controlsContainer/exitButtom"]
layout_mode = 2
theme_override_constants/margin_top = -15
theme_override_constants/margin_right = -15

[node name="toggleControlsMenu" type="Button" parent="mainContainer/controlsContainer/exitButtom/MarginContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/hover = SubResource("StyleBoxTexture_dxa0p")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dxa0p")
theme_override_styles/normal = SubResource("StyleBoxTexture_4i4ft")

[node name="settingsMenuContainer" type="MarginContainer" parent="mainContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NinePatchRect" type="NinePatchRect" parent="mainContainer/settingsMenuContainer"]
custom_minimum_size = Vector2(300, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_ladwj")
region_rect = Rect2(153, 9, 30, 30)
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="mainContainer/settingsMenuContainer/NinePatchRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="title" type="HBoxContainer" parent="mainContainer/settingsMenuContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 15

[node name="Control" type="Control" parent="mainContainer/settingsMenuContainer/title"]
layout_mode = 2
size_flags_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="mainContainer/settingsMenuContainer/title"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Control" type="Control" parent="mainContainer/settingsMenuContainer/title/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="settingsDisplay" type="Label" parent="mainContainer/settingsMenuContainer/title/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.952941, 0.898039, 0.760784, 1)
theme_override_colors/font_outline_color = Color(0.768627, 0.603922, 0.423529, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("2_otd6a")
theme_override_font_sizes/font_size = 30
text = "Settings
"

[node name="exitButtom" type="VBoxContainer" parent="mainContainer/settingsMenuContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="mainContainer/settingsMenuContainer/exitButtom"]
layout_mode = 2
theme_override_constants/margin_top = -15
theme_override_constants/margin_right = -15

[node name="toggleSettingsMenu" type="Button" parent="mainContainer/settingsMenuContainer/exitButtom/MarginContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/hover = SubResource("StyleBoxTexture_dxa0p")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dxa0p")
theme_override_styles/normal = SubResource("StyleBoxTexture_4i4ft")

[node name="VBoxContainer" type="VBoxContainer" parent="mainContainer/settingsMenuContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="volumeBar" type="HBoxContainer" parent="mainContainer/settingsMenuContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="mainContainer/settingsMenuContainer/VBoxContainer/volumeBar"]
layout_mode = 2

[node name="Control" type="Control" parent="mainContainer/settingsMenuContainer/VBoxContainer/volumeBar/HBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="mainContainer/settingsMenuContainer/VBoxContainer/volumeBar/HBoxContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxTexture_uf5uq")
theme_override_styles/normal = SubResource("StyleBoxTexture_23ww7")

[node name="HScrollBar" type="HScrollBar" parent="mainContainer/settingsMenuContainer/VBoxContainer/volumeBar"]
custom_minimum_size = Vector2(150, 5)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/scroll = SubResource("StyleBoxTexture_sip23")
theme_override_styles/scroll_focus = SubResource("StyleBoxTexture_sip23")
theme_override_styles/grabber = SubResource("StyleBoxTexture_sh8md")
theme_override_styles/grabber_highlight = SubResource("StyleBoxTexture_fu831")
theme_override_styles/grabber_pressed = SubResource("StyleBoxTexture_fu831")

[node name="howToPlayContainer" type="MarginContainer" parent="mainContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NinePatchRect" type="NinePatchRect" parent="mainContainer/howToPlayContainer"]
custom_minimum_size = Vector2(420, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_ladwj")
region_rect = Rect2(293, 5, 38, 38)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="mainContainer/howToPlayContainer/NinePatchRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="mainContainer/howToPlayContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 9

[node name="title" type="HBoxContainer" parent="mainContainer/howToPlayContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 25

[node name="Control" type="Control" parent="mainContainer/howToPlayContainer/VBoxContainer/title"]
layout_mode = 2
size_flags_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="mainContainer/howToPlayContainer/VBoxContainer/title"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="mainContainer/howToPlayContainer/VBoxContainer/title/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="settingsDisplay" type="Label" parent="mainContainer/howToPlayContainer/VBoxContainer/title/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.952941, 0.898039, 0.760784, 1)
theme_override_colors/font_outline_color = Color(0.768627, 0.603922, 0.423529, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("2_otd6a")
theme_override_font_sizes/font_size = 30
text = "Bem-vindo ao BioGame:
"

[node name="player" type="HBoxContainer" parent="mainContainer/howToPlayContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="Control" type="Control" parent="mainContainer/howToPlayContainer/VBoxContainer/player"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="mainContainer/howToPlayContainer/VBoxContainer/player"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TXT1" type="Label" parent="mainContainer/howToPlayContainer/VBoxContainer/player/VBoxContainer"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.952941, 0.898039, 0.760784, 1)
theme_override_colors/font_outline_color = Color(0.768627, 0.603922, 0.423529, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("2_otd6a")
theme_override_font_sizes/font_size = 20
text = "Neste jogo educativo, você assume o papel de uma bactéria em sua luta pela sobrevivência!

O objetivo é explorar diferentes ambientes, aprender sobre os mecanismos de defesa do corpo humano e descobrir como as bactérias enfrentam esses desafios.

Prepare-se para aprender sobre biologia e microbiologia enquanto se diverte!"
autowrap_mode = 3
uppercase = true

[node name="exitButtom" type="VBoxContainer" parent="mainContainer/howToPlayContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="mainContainer/howToPlayContainer/exitButtom"]
layout_mode = 2
theme_override_constants/margin_top = -15
theme_override_constants/margin_right = -15

[node name="toggleHTPMenu" type="Button" parent="mainContainer/howToPlayContainer/exitButtom/MarginContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/hover = SubResource("StyleBoxTexture_dxa0p")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dxa0p")
theme_override_styles/normal = SubResource("StyleBoxTexture_4i4ft")

[connection signal="pressed" from="mainContainer/MainMenuContainer/MarginContainer/VBoxContainer/playButton" to="mainContainer" method="_on_play_button_pressed"]
[connection signal="pressed" from="mainContainer/MainMenuContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/toggleControlsMenu" to="mainContainer" method="_on_toggle_controls_menu_pressed"]
[connection signal="pressed" from="mainContainer/MainMenuContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/toggleHTPMenu" to="mainContainer" method="_on_toggle_htp_menu_pressed"]
[connection signal="pressed" from="mainContainer/MainMenuContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/toggleSettingsMenu" to="mainContainer" method="_on_toggle_settings_menu_pressed"]
[connection signal="pressed" from="mainContainer/MainMenuContainer/MarginContainer/VBoxContainer/exitButton" to="mainContainer" method="_on_exit_button_pressed"]
[connection signal="pressed" from="mainContainer/controlsContainer/exitButtom/MarginContainer/toggleControlsMenu" to="mainContainer" method="_on_toggle_controls_menu_pressed"]
[connection signal="pressed" from="mainContainer/settingsMenuContainer/exitButtom/MarginContainer/toggleSettingsMenu" to="mainContainer" method="_on_toggle_settings_menu_pressed"]
[connection signal="pressed" from="mainContainer/howToPlayContainer/exitButtom/MarginContainer/toggleHTPMenu" to="mainContainer" method="_on_toggle_htp_menu_pressed"]
